--- a/templates/module_1.html
+++ b/templates/module_1.html
@@ -23,6 +23,6 @@
         <input type="submit" value="Submit">
     </form>
     <script src="{{ url_for('static', filename='data/m1_questions.js')}}"></script> <!-- Load questions data -->
-    <script src="{{ url_for('static', filename='js/module_1.js')}}"></script> <!-- Load fucntions -->
+    <script src="{{ url_for('static', filename='js/scripts.js')}}"></script> <!-- Load fucntions -->
 </body>
 </html>
