Add some study texts for four core modules

--- a/templates/home.html
+++ b/templates/home.html
@@ -54,9 +54,9 @@
         <div class="module-group">
             <h2>Singapore Modules</h2>
             <div style="display: flex; flex-direction: column; gap: 15px;">  
-                <button onclick="window.location.href='/module_1'">Module 5 (SG)</button>
-                <button onclick="window.location.href='/module_2'">Module 8+8A (SG)</button>
-                <button onclick="window.location.href='/module_3'">Module 9+9A (SG)</button>
+                <button onclick="window.location.href='/module_1'">RES5 Module</button>
+                <button onclick="window.location.href='/module_2'">M9 + M9A Module</button>
+                <button onclick="window.location.href='/module_3'">Health Insurance Module</button>
             </div>  
         </div>
         <div class="module-group">
