standardize styles and scripts module

--- a/templates/hk_module_3.html
+++ b/templates/hk_module_3.html
@@ -8,7 +8,7 @@
     <title>Subpage 1</title>
 </head>
 <body>
-    <h2>RES5</h2>
+    <h2>Long Term Insurance</h2>
     <form onsubmit="submitForm(event)">
         <div class="model-select-container">
             <label for="modelSelect">Choose a method:</label>
@@ -22,7 +22,7 @@
         <br><br>
         <div id="questions-container"></div>
     </form>
-    <script src="{{ url_for('static', filename='data/m1_questions.js')}}"></script> <!-- Load questions data -->
+    <script src="{{ url_for('static', filename='data/hkm3_questions.js')}}"></script> <!-- Load questions data -->
     <script src="{{ url_for('static', filename='js/scripts.js')}}"></script> <!-- Load fucntions -->
 </body>
 </html>
