--- a/templates/module_2.html
+++ b/templates/module_2.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/module_3.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css')}}">
     <title>Subpage 2</title>
 </head>
 <body>
-    <h2>Subpage 2: Insurance Exam Questions</h2>
+    <h2>Module 9 + 9A</h2>
     <form onsubmit="submitForm(event)">
         <div class="model-select-container">
             <label for="modelSelect">Choose a method:</label>
