--- a/templates/module_3.html
+++ b/templates/module_3.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/module_3.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css')}}">
 
     <title>Quiz</title>
 </head>
 <body>
-    <h2>Module 3: Insurance Exam Questions</h2>
+    <h2>Health Insurance</h2>
 
     <form onsubmit="submitForm(event)">
         <div class="model-select-container">
