--- a/templates/home.html
+++ b/templates/home.html
@@ -57,6 +57,7 @@
                 <button onclick="window.location.href='/module_1'">RES5 Module</button>
                 <button onclick="window.location.href='/module_2'">M9 + M9A Module</button>
                 <button onclick="window.location.href='/module_3'">Health Insurance Module</button>
+                <button onclick="window.location.href='/actuary'">Actuary Exam</button>
             </div>  
         </div>
         <div class="module-group">
