--- a/templates/module_1.html
+++ b/templates/module_1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css')}}">
-    <title>Subpage 1</title>
+    <title>RES 5 Module</title>
 </head>
 <body>
     <h2>RES5</h2>
