experimental webpage to test different data and html generation

--- a/templates/home.html
+++ b/templates/home.html
@@ -66,6 +66,7 @@
                 <button onclick="window.location.href='/hk_module_1'">Principles and practice (HK)</button>  
                 <button onclick="window.location.href='/hk_module_2'">General insrance (HK)</button>
                 <button onclick="window.location.href='/hk_module_3'">Long-term insurance (HK)</button>
+                <button onclick="window.location.href='/test'">Test module</button>
             </div>  
         </div>
     </div>
