--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
         }
         .module-group {
             width: 300px; /* Set a uniform width for each column */
-            text-align: left;
+            text-align: center;
         }
         button {
             padding: 15px 30px;
